--- a/src/index.css
+++ b/src/index.css
@@ -51,8 +51,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+
 }
 
 h1 {
@@ -90,4 +89,18 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.canvas-container {
+  position: relative;
+  width: 100%;
+  padding-top: 100%; /* This makes the container square */
+}
+
+.canvas-container canvas {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
